--- a/SMCC-draft.tex
+++ b/SMCC-draft.tex
@@ -102,7 +102,7 @@ Niccol{\`o} Veltri \qquad\qquad Cheng-Syuan Wan
 \begin{document}
 \maketitle
 \begin{abstract}
-  Monoidal closed categories are used as standard categorical models of intuitionistic noncommutative linear logic: the monoidal unit and tensor model the multiplicative unit and conjunction; the internal hom models linear implication. In recent years, the weaker notion of skew monoidal closed category has been proposed by Ross Street, where the three structural laws of left and right unitality and associativity are not required to be invertible, they are merely natural transformations with a specific orientation. A question arises naturally: Is it possible to find logical proof systems which are naturally modelled by skew monoidal closed categories? We answer positively by introducing a a cut-free sequent calculus that serves the purpose. We study the proof-theoretic semantics of the sequent calculus by identifying a calculus of derivations in normal form, obtained from an adaptation of Andreoli's focusing technique to the skew setting. The resulting focused sequent calculus peculiarly employs a system of tags for keeping track of new formulae appearing in the antecedent and appropriately reducing nondeterministic choices in proof search. Focusing solves the coherence problem for skew monoidal closed categories, which implies the existence of effective procedures for deciding equality of canonical maps in all models.
+  Monoidal closed categories are used as standard categorical models of intuitionistic non-commutative linear logic: the monoidal unit and tensor model the multiplicative unit and conjunction; the internal hom models linear implication. In recent years, the weaker notion of skew monoidal closed category has been proposed by Ross Street, where the three structural laws of left and right unitality and associativity are not required to be invertible, they are merely natural transformations with a specific orientation. A question arises naturally: Is it possible to find logical proof systems which are naturally modelled by skew monoidal closed categories? We answer positively by introducing a a cut-free sequent calculus that serves the purpose. We study the proof-theoretic semantics of the sequent calculus by identifying a calculus of derivations in normal form, obtained from an adaptation of Andreoli's focusing technique to the skew setting. The resulting focused sequent calculus peculiarly employs a system of tags for keeping track of new formulae appearing in the antecedent and appropriately reducing non-deterministic choices in proof search. Focusing solves the coherence problem for skew monoidal closed categories, which implies the existence of effective procedures for deciding equality of canonical maps in all models.
 
 %%   In previous works from Uustalu et al, proof theory of some variants of skew monoidal categories are developed.
 %%   We also know that given a skew monoidal category, there is a corresponding skew closed structure on the same category.
@@ -114,7 +114,7 @@ Niccol{\`o} Veltri \qquad\qquad Cheng-Syuan Wan
 %%   Therefore we have an effective procedure to determine morphism existence and equivalence in skew monoidal closed categories.
 \end{abstract}
 \section{Introduction}
-It is a well-known fact from the late 80s/early 90s that symmetric monoidal closed categories are standard categorical models of \MILL, multiplicative intuitionistic linear logic, whose logical connectives comprise of multiplicative unit $\I$ and conjunction $\ot$ and linear implication $\lolli$ \cite{mellies:categorical:09}. Probably lesser-known, though a quite straightforward generalization of the previous sentence which actually predated the inception of linear logic altogether, is the fact that (non-necessarily symmetric) monoidal biclosed categories are categorical models of the noncommutative variant of \MILL\ (for which we use the abbreviation \NMILL) \cite{abrusci:noncommutative:1990}, where the structural rule of exchange is absent and there are two ordered implications $\lolli$ and $\illol$ \cite{lambek:deductive:68}. A proof system for \NMILL\ is typically called \emph{Lambek calculus}. Lambek refers to the implications $\lolli$ and $\illol$ as residuals, and models of Lambek calculus are thereupon called residual categories. The Lambek calculus is often practically employed in formal investigations of natural languages \cite{lambek:mathematics:58}.
+It is a well-known fact from the late 80s/early 90s that symmetric monoidal closed categories are standard categorical models of \MILL, multiplicative intuitionistic linear logic, whose logical connectives comprise of multiplicative unit $\I$ and conjunction $\ot$ and linear implication $\lolli$ \cite{mellies:categorical:09}. Probably lesser-known, though a quite straightforward generalization of the previous sentence which actually predated the inception of linear logic altogether, is the fact that (non-necessarily symmetric) monoidal biclosed categories are categorical models of the non-commutative variant of \MILL\ (for which we use the abbreviation \NMILL) \cite{abrusci:noncommutative:1990}, where the structural rule of exchange is absent and there are two ordered implications $\lolli$ and $\illol$ \cite{lambek:deductive:68}. A proof system for \NMILL\ is typically called \emph{Lambek calculus}. Lambek refers to the implications $\lolli$ and $\illol$ as residuals, and models of Lambek calculus are thereupon called residual categories. The Lambek calculus is often practically employed in formal investigations of natural languages \cite{lambek:mathematics:58}.
 By dropping one of the ordered implication of \NMILL\ one obtains a fragment of the Lambek calculus enjoying categorical semantics in every monoidal closed category.
 
 In recent years, Ross Street introduced the new notion of (left) skew monoidal closed categories \cite{street:skew-closed:2013}. These are a weakening of monoidal closed categories: their structure includes a unit $I$, a tensor $\ot$, an internal hom $\lolli$ and an adjunction relating the latter two operations, as in usual non-skew monoidal categories. The difference lays in the three structural laws of left and right unitality, $\lambda_A : \I \ot A \to A$ and $\rho_A : A \to A \ot \I$, and associativity, $\alpha_{A,B,C} : (A \ot B) \ot C \to A \ot (B \ot C)$, which are usually required to be natural isomorphisms, but in the skew variant are merely natural transformations with the specified orientation. Street originally proposed this weaker notion for better understanding and fixing a famous imbalance, first noticed by Eilenberg and Kelly \cite{eilenberg:closed:1966}, found in the usual adjunction relating monoidal and closed structures \cite{street:skew-closed:2013,uustalu:eilenberg-kelly:2020}. In the last decade, skew monoidal closed categories, together with their non-closed/non-monoidal variants, have been thoroughly studied, with applications ranging from algebra and homotopy theory to programming language semantics \cite{szlachanyi:skew-monoidal:2012,lack:skew:2012,lack:triangulations:2014,altenkirch:monads:2014,buckley:catalan:2015,bourke:skew:2017,bourke:skew:2018,tomita:realizability:21}.
@@ -128,7 +128,7 @@ The metatheory of \SkNMILL\ is developed in two different but related directions
 This shows that the categorical semantics of \SkNMILL\ is sound and, most importantly, complete. The latter fact implies that deciding the commutativity of a diagram made of canonical maps (i.e. structural laws) in an arbitrary skew monoidal category, a problem typically referred to as \emph{coherence} in the categorical literature, is reduced to checking whether the corresponding derivations in the sequnt calculus are $\circeq$-related.
 
 \item We investigate the proof-thereoretic semantics of \SkNMILL, by defining a normalization strategy for sequent calculus derivations wrt. the congruence $\circeq$, when the latter is considered as weakly confluent and strongly normalizing reduction relation. The shape of normal forms is made explicit in a new \emph{focused} sequent calculus, whose derivations act as targets of the normalization procedure. The sequent calculus is ``focused'' in the sense of Andreoli \cite{andreoli:logic:1992}, as it implements a sound and complete goal-directed proof search strategy attempting to build a derivation in the (original, unfocused) sequent calculus. The focused system in this paper extends the previously
-developed normal forms for skew monoidal (non-closed) categories \cite{uustalu:sequent:2021,uustalu:proof:nodate}. The presence of both positive ($\I$,$\ot$) and negative ($\lolli$) connectives requires some extra care in the implementation of the proof search algorithm, which is reflected in the design of the focused sequent calculus, in particular when aiming at removing all possible nondeterministic choices (wrt. the conversion $\circeq$) that can arise during proof search. This is technically realized in the focused sequent calculus by the peculiar employment of a system of \emph{tags} for keeping track of new formulae appearing in the antecedent. The focused sequent calculus can also be seen as a concrete presentation of the initial model for \SkNMILL, and as such can be used for solving the coherence problem in an effective fashion: deciding commutativity of canonical diagrams in arbitrary skew monoidal categories is equivalent to deciding the \emph{syntactic} equality of the corresponding focused derivations.
+developed normal forms for skew monoidal (non-closed) categories \cite{uustalu:sequent:2021,uustalu:proof:nodate}. The presence of both positive ($\I$,$\ot$) and negative ($\lolli$) connectives requires some extra care in the implementation of the proof search algorithm, which is reflected in the design of the focused sequent calculus, in particular when aiming at removing all possible non-deterministic choices (wrt. the conversion $\circeq$) that can arise during proof search. This is technically realized in the focused sequent calculus by the peculiar employment of a system of \emph{tags} for keeping track of new formulae appearing in the antecedent. The focused sequent calculus can also be seen as a concrete presentation of the initial model for \SkNMILL, and as such can be used for solving the coherence problem in an effective fashion: deciding commutativity of canonical diagrams in arbitrary skew monoidal categories is equivalent to deciding the \emph{syntactic} equality of the corresponding focused derivations.
 \end{enumerate}
 
 %% Srtucture of the paper?
@@ -155,8 +155,8 @@ developed normal forms for skew monoidal (non-closed) categories \cite{uustalu:s
 %% Next section, we will see a focused sequent calculus system and its connection with original sequent calculus system.
 %% We will see that all derivations in a same equivalence class under proof conversion relation, they will correspond to a unique derivation in focused system.
 
-\section{A Sequent Calculus for Skew Noncommutative \MILL}\label{sec2}
-In this section we introduce the sequent calculus for our skew variant of noncommutative multiplicative linear logic (\NMILL), that we call \SkNMILL.
+\section{A Sequent Calculus for Skew Non-Commutative \MILL}\label{sec2}
+In this section we introduce the sequent calculus for our skew variant of non-commutative multiplicative intuitionistic linear logic (\NMILL), that we call \SkNMILL.
 
 Formulae are inductively generated by the grammar $A,B ::= X \ | \ \I \ | \ A \ot B \ | \ A \lolli B$, where $X$ comes from a fixed set $\mathsf{At}$ of atomic formulae (or propositional variables), $\I$ is a multiplicative unit, $\ot$ is a multiplicative tensor (or conjunction) and $\lolli$ is a linear implication.
 
@@ -849,9 +849,9 @@ We explain the rules of the focused sequent calculus from the perspective of bot
 \item[($\vdash_\F$)] We apply one of the four remaining rules $\ax$, $\unitr$, $\tr$ or $\lleft$. The premises of $\tr$ are both in phase $\RI$ since $A$ and $B$ are generic formulae, in particular they could be implications. The first premise of $\lleft$ is in phase $\RI$ for the same reason, while the second premise is in $\LI$ because the succedent formula $P$ is positive.
 \end{itemize}
 
-The focused sequent calculus in (\ref{eq:naive}) is sound and complete wrt. the sequent calculus in (\ref{eq:seqcalc}), but not \emph{equationally complete}, i.e. there exist $\circeq$-related derivations in (\ref{eq:seqcalc}) which have multiple distinct derivations in (\ref{eq:naive}). In other words, the calculus in (\ref{eq:naive}) is too permissive. There are in fact two forms on nondeterminism that can arise:
+The focused sequent calculus in (\ref{eq:naive}) is sound and complete wrt. the sequent calculus in (\ref{eq:seqcalc}), but not \emph{equationally complete}, i.e. there exist $\circeq$-related derivations in (\ref{eq:seqcalc}) which have multiple distinct derivations in (\ref{eq:naive}). In other words, the calculus in (\ref{eq:naive}) is too permissive. There are in fact two forms on non-determinism that can arise:
 \begin{enumerate}
-\item The first premise of the $\tr$ rule is in phase $\RI$, since $A$ is potentially an implication on which the invertible right rule $\lright$ could act upon. Proof search on the first premise eventually hits phase $\Pass$, when we have the possibility of applying the $\pass$ rule if the stoup is empty. This implies the existence of situations where either of the rules $\tr$ and $\pass$ can be applied first, in both cases resulting in valid focused derivations. The congruence relation $\circeq$ eliminates this form of nondeterminism via the 4th equation in Figure \ref{fig:circeq}, i.e. the permutative conversion involving $\tr$ and $\pass$.
+\item The first premise of the $\tr$ rule is in phase $\RI$, since $A$ is potentially an implication on which the invertible right rule $\lright$ could act upon. Proof search on the first premise eventually hits phase $\Pass$, when we have the possibility of applying the $\pass$ rule if the stoup is empty. This implies the existence of situations where either of the rules $\tr$ and $\pass$ can be applied first, in both cases resulting in valid focused derivations. The congruence relation $\circeq$ eliminates this form of non-determinism via the 4th equation in Figure \ref{fig:circeq}, i.e. the permutative conversion involving $\tr$ and $\pass$.
 %  The other occurs when we decompose $\ot$ in succedent, left premise goes back to phase $\RI$, so if the left premise of $\tr$ application is empty, then $\pass$ could be applied in phase $\Pass$.
   Consider the two distinct derivations of $- \mid X , \Gamma , \Delta \vdash_{\Pass} P \ot C$ under assumptions $f : X \mid \Gamma \vdash_{\LI} P$ and $g : - \mid \Delta \vdash_{\RI} C$.
   \begin{equation}\label{eq:passtr}
@@ -893,7 +893,7 @@ The focused sequent calculus in (\ref{eq:naive}) is sound and complete wrt. the 
   \end{equation}
   The rule $\mathsf{sw}$ is a sequence of (appropriately typed) phase
   switching rules $\LI2\RI$, $\Pass2\LI$ and $\F2\Pass$.
-  \item Rules $\tr$ and $\lleft$ appear in the same phase $\F$, though there are situations where both rules can be applied first, which can lead to two valid but distinct focused derivations. More precisely, there are cases when $\tr$ and $\lleft$ can be interchangeably applied. This form of nondeterminism is tamed in the congruence relation $\circeq$ by the last permutative conversion in Figure \ref{fig:circeq}, involving $\tr$ and $\lleft$. As an example, consider the following two valid derivations of $A \lolli X \mid \Gamma , \Delta , \Lambda \vdash_{\F} P \ot D$ under the assumption of $f : - \mid \Gamma \vdash_{\RI} A$, $g : X \mid \Delta \vdash_{\LI} P$ and $h : - \mid \Lambda \vdash_{\RI} D$.
+  \item Rules $\tr$ and $\lleft$ appear in the same phase $\F$, though there are situations where both rules can be applied first, which can lead to two valid but distinct focused derivations. More precisely, there are cases when $\tr$ and $\lleft$ can be interchangeably applied. This form of non-determinism is tamed in the congruence relation $\circeq$ by the last permutative conversion in Figure \ref{fig:circeq}, involving $\tr$ and $\lleft$. As an example, consider the following two valid derivations of $A \lolli X \mid \Gamma , \Delta , \Lambda \vdash_{\F} P \ot D$ under the assumption of $f : - \mid \Gamma \vdash_{\RI} A$, $g : X \mid \Delta \vdash_{\LI} P$ and $h : - \mid \Lambda \vdash_{\RI} D$.
 %  In this case $\tr$ and $\lleft$ rule applications are interchangeable.
 %  For convenience, we define an abbreviation of consecutive phase switching rule applications under suitable condition
 %  \begin{displaymath}
@@ -948,7 +948,7 @@ The focused sequent calculus in (\ref{eq:naive}) is sound and complete wrt. the 
 
 %In summary, two counter-example above show that our naive focused sequent calculus contains too much non-determinacy.
 
-An impulsive idea for solving the nondeterminism of type 2 is to prioritize the application of $\lleft$ over $\tr$, e.g. by forcing the application of $\lleft$ in phase $\F$ whenever the stoup formula is an implication and restricting the application of $\tr$ to sequents where the stoup formula is atomic. This idea would lead to an unsound calculus, since the sequent $X \lolli Y \mid Z \vdash_{\F} (X \lolli Y) \ot Z$, which has a valid correspondent in (\ref{eq:seqcalc}), would not be provable by first applying the $\lleft$ rule.
+An impulsive idea for solving the non-determinism of type 2 is to prioritize the application of $\lleft$ over $\tr$, e.g. by forcing the application of $\lleft$ in phase $\F$ whenever the stoup formula is an implication and restricting the application of $\tr$ to sequents where the stoup formula is atomic. This idea would lead to an unsound calculus, since the sequent $X \lolli Y \mid Z \vdash_{\F} (X \lolli Y) \ot Z$, which has a valid correspondent in (\ref{eq:seqcalc}), would not be provable by first applying the $\lleft$ rule.
 Dually, prioritizing the application of $\tr$ over $\lleft$ leads to similar issues, e.g. the sequent $X \lolli (Y \ot Z) \mid X \vdash_\F Y \ot Z$ would not be derivable by first applying the $\tr$ rule.
 
 %It seems can eliminate non-determinacy but a new problem occurs.
@@ -987,14 +987,14 @@ Dually, prioritizing the application of $\tr$ over $\lleft$ leads to similar iss
 \subsection{A Tagged Focused System}\label{sec:tag}
 
 %However, solution for case 2 inspires us to come up with a uniform solution.
-In order to eliminate the nondeterminism of type 1 between $\pass$ and $\tr$, we need to restrict the possible application of $\pass$ occurring after the application of $\tr$. 
+In order to eliminate the non-determinism of type 1 between $\pass$ and $\tr$, we need to restrict the possible application of $\pass$ occurring after the application of $\tr$. 
 One way to achieve this is by forcing such application of $\pass$ to move the leftmost formula to the stoup only if such formula occurrence is \emph{new}, in the sense that it was not already present in the context before the first $\tr$ application. For example, with this restriction in place, the application of $\pass$ in the 2nd derivation of (\ref{eq:passtr}) would be invalid, since the formula $X$ was already present in context before the application of $\tr$.
 
-Analogously, the nondeterminism of type 2 between $\lleft$ and $\tr$ can be eliminated by restricting the possible application of $\lleft$ occurring after the application of $\tr$. This can be achieved by forcing such application of $\lleft$ to split the context in two parts $\Gamma,\Delta$ in such a way that $\Gamma$, i.e. the context of the first premise, must contain some \emph{new} formula not occurring in the context before the first $\tr$ application. Under this restriction, the application of $\lleft$ in the 2nd derivation of (\ref{eq:llefttr}) would become invalid, since all formulae in $\Gamma$ are already present in context before the application of $\tr$.
+Analogously, the non-determinism of type 2 between $\lleft$ and $\tr$ can be eliminated by restricting the possible application of $\lleft$ occurring after the application of $\tr$. This can be achieved by forcing such application of $\lleft$ to split the context in two parts $\Gamma,\Delta$ in such a way that $\Gamma$, i.e. the context of the first premise, must contain some \emph{new} formula not occurring in the context before the first $\tr$ application. Under this restriction, the application of $\lleft$ in the 2nd derivation of (\ref{eq:llefttr}) would become invalid, since all formulae in $\Gamma$ are already present in context before the application of $\tr$.
 
 One way to distinguish between old and new formulae occurrences in the above cases is by marking with a \emph{tag} $\bullet$ each new formula appearing in context during the building of a focused derivation. We christen a formula occurrence ``new'' whenever it is moved from the succedent to the context via an application of the right implication rule $\lright$. In order to remember when we are building a derivation of a sequent arising as the first premise of $\tr$, in which the distinction between old and new formula is relevant, we mark such sequents with a tag $\bullet$ as well.
 %In other words, the first premise of  $\tr$ in (\ref{eq:naive}) would be replace by a sequent $T \mid \Gamma \vdash_\RI^\bullet A$
-%In the complicated focused system, sequents can also potentially be annotated with an extra superscript annotation $\bullet$, called a \emph{tag}. Tags are a technical mechanism for keeping track of new formulae appearing in the context after the application of the right implication rule. This, as we will thorougly discuss later, allows to control the reduction of nondeterministic choices during proof search, in particular resolving the possible choices arising from the permutative conversions of Figure \ref{fig:circeq}.
+%In the complicated focused system, sequents can also potentially be annotated with an extra superscript annotation $\bullet$, called a \emph{tag}. Tags are a technical mechanism for keeping track of new formulae appearing in the context after the application of the right implication rule. This, as we will thorougly discuss later, allows to control the reduction of non-deterministic choices during proof search, in particular resolving the possible choices arising from the permutative conversions of Figure \ref{fig:circeq}.
 More generally, we write $S \mid \Gamma \xvdash_{ph} C$ for a sequent that can potentially be tagged, i.e. the turnstile could be of the form $\vdash_{ph}^{\bullet}$ or $\vdash_{ph}$, for all $ph \in \{ \RI,\LI,\Pass,\F\}$. This implies that there are a total of 8 sequent phases, corresponding to the possible combinations of 4 subscript phases with the tagged/untagged state.
 %A tag can either be \emph{black} $\bullet$, with corresponding turnstile symbol $\vdash_{ph}^{\bullet}$, or \emph{white} $\circ$, in which case we write $\vdash_{ph}^\circ$ or simply $\vdash_{ph}$, where $ph \in \{ \RI,\LI,\Pass,\F\}$. This implies that there are a total of 8 sequent phases, corresponding to the possible combinations of 4 subscript phases with the 2 tags.
 In tagged sequents  $S \mid \Gamma \vdash_{ph}^{\bullet} C$, formulae in the context $\Gamma$ are also allowed to be tagged, i.e. they can be of the form $A^\bullet$ or $A$. Given a context $\Gamma$ containing possibly tagged formulae, we write $\Gamma^{\circ}$ for the same context where all the black tags have been removed from formulae. All formulae in a untagged sequent $S \mid \Gamma \vdash_{ph} C$ are tag-free.
@@ -1088,8 +1088,8 @@ In black phase, the search for a proof of $T \mid \Gamma^\circ \vdash^\bullet_\R
 \item[($\vdash^\bullet_\LI$)] Since $T$ is a negative stoup, we can only move to the black $\Pass$ phase.
   %keeping the same tag $x$. Notice that  the formula $B$ in the premise of rule $\tl$ does not get marked with a tag.
   %In this phase we do not need to enforce the order between $\unitl$ and $\tl$ applicaitons because they are not exchangeable.
-\item[($\vdash^\bullet_\Pass$)] We have the possibility of applying the $\pass$ rule and move the leftmost formula $A$ in the context to the stoup, but only when this formula is marked by a black tag $\bullet$. This restriction makes it possible to remove nondeterminism of type 1. Afterwards, we strip the context of all tags and jump to untagged $\LI$ phase. If we do not (or cannot) apply $\pass$, we move to phase $\F$  in two different ways, depending on the status of $T$. If $T$ is either empty or atomic, we strip the context of the tags and move to untagged $\F$ phase. If $T$ is an implication, we move to black $\F$ phase. In the latter case, the tags are preserved for restricting the future possible applications of $\lleft$.
-\item[($\vdash^\bullet_\F$)] We can apply only $\tr$ or $\lleft$. If we apply $\tr$, we remove all tags from the context $\Gamma$ and move the first premise to black $\RI$ phase again. The tags are removed from the contexts in order to not mix the tagged formulae that have appeared in context so far with the ``new'' formulae that may appear in the future. The most interesting case is $\lleft$, which can only be applied if $\Gamma$ contains at least one tagged formula. This side condition implements the restriction allowing the elimination of nondeterminism of type 2. All the premises of $\lleft$ are stripped of their tags.
+\item[($\vdash^\bullet_\Pass$)] We have the possibility of applying the $\pass$ rule and move the leftmost formula $A$ in the context to the stoup, but only when this formula is marked by a black tag $\bullet$. This restriction makes it possible to remove non-determinism of type 1. Afterwards, we strip the context of all tags and jump to untagged $\LI$ phase. If we do not (or cannot) apply $\pass$, we move to phase $\F$  in two different ways, depending on the status of $T$. If $T$ is either empty or atomic, we strip the context of the tags and move to untagged $\F$ phase. If $T$ is an implication, we move to black $\F$ phase. In the latter case, the tags are preserved for restricting the future possible applications of $\lleft$.
+\item[($\vdash^\bullet_\F$)] We can apply only $\tr$ or $\lleft$. If we apply $\tr$, we remove all tags from the context $\Gamma$ and move the first premise to black $\RI$ phase again. The tags are removed from the contexts in order to not mix the tagged formulae that have appeared in context so far with the ``new'' formulae that may appear in the future. The most interesting case is $\lleft$, which can only be applied if $\Gamma$ contains at least one tagged formula. This side condition implements the restriction allowing the elimination of non-determinism of type 2. All the premises of $\lleft$ are stripped of their tags.
 \end{itemize}
 
 %In this sense, we can add some marks on left premise of $\tr$ applications.
@@ -1114,9 +1114,9 @@ In black phase, the search for a proof of $T \mid \Gamma^\circ \vdash^\bullet_\R
 %  Black tags produced by $\lright$ play essential roles here because if there is no black formula in $\Gamma$, then it implies that we cannot do $\lleft$ after $\tr$.
 %  In this situation, we must decompose $\lolli$ in stoup prior than $\ot$ in conclusion.
 
-The tagged focused system solves the two types of nondeterminism without losing provablity. For example, only one of the two derivations in (\ref{eq:passtr}) is valid using the rules in (\ref{eq:focus}), and similarly for (\ref{eq:llefttr})
-%is valid using the rules in (\ref{eq:focus}), removing nondeterminism of type 2:
-%removing nondeterminism of type 1:
+The tagged focused system solves the two types of non-determinism without losing provablity. For example, only one of the two derivations in (\ref{eq:passtr}) is valid using the rules in (\ref{eq:focus}), and similarly for (\ref{eq:llefttr})
+%is valid using the rules in (\ref{eq:focus}), removing non-determinism of type 2:
+%removing non-determinism of type 1:
 %given a sequent $A \lolli B \mid \Gamma , \Delta , \Lambda \vdash_{\RI} C \ot D$ and supposed that $B$ is irreducible, $C = A' \lolli B'$,
 %  we can construct a proof:
 \begin{displaymath}
@@ -1324,6 +1324,17 @@ As proved in Section \ref{sec:catsem}, the sequent calculus for \SkNMILL\ has an
 %%\end{theorem}
 
 \section{Conclusion}
+
+The paper describes a cut-free sequent calculus for \SkNMILL, a skew variant of non-commutative multiplicative intuitionistic linear logic. The introduction of the logic \SkNMILL and its deductive system is motivated by the categorical notion of skew monoidal closed category, which serves as the intended categorical semantics of the logic. Sequent calculus derivations admit unique normal forms wrt. a congruence relation $\circeq$ capturing the equational theory of skew monoidal closed categories on the syntactic level of derivations. Normal forms can be organized in a focused sequent calculus, where each focused derivation uniquely corresponds a $\circeq$-equivalence class in the unfocused sequent calculus. In order to deal with all the permutative conversions in $\circeq$, and consequently eliminate the related sources of non-determinism in bottom-up proof search, the focused sequent calculus employs a system of tags for keeping track of the new formulae occurring in the context while building a derivation. The focused sequent calculus also solves the coherence problem for skew monoidal closed category, since deciding syntactic equality of focused derivations is equivalent to deciding the commutativity of canonical diagrams in any skew monoidal closed category.
+
+We plan to investigate alternative presentations of \SkNMILL, such as natural deduction and its associated term calculus. Analogously to the case of the sequent calculus studied in this paper, we expect natural deduction derivation to b strongly normalizing wrt. an appropriately defined $\beta\eta$-conversion. It would be interesting to directly compare the resulting $\beta\eta$-long normal forms with the focused derivations of Section \ref{sec:focus}.
+
+The employement of a system of tags in focused proofs, for taming the non-deterministic choices arising in proof search and properly characterizing the normal forms of $\circeq$, appears to be a new idea. In the literature there exist other methods for drastically reduce non-determinism in proof search, such as multi-focusing \cite{chaudhuri:canonical:2008} or saturated focusing \cite{scherer:simple:2015}. We wonder if our system of tags is in some way related to these other techniques.
+
+This paper represents the latest installment of a large project aiming at the development of the proof theory of categories with skew structure. So far the project, promoted and advanced by Uustalu, Veltri and Zeilberger, has investigated proof systems for skew semigroup categories (a.k.a. the Tamari order) \cite{zeilberger:semiassociative:19}, (symmetric and non-symmetric) skew monoidal categories \cite{uustalu:sequent:2021,uustalu:proof:nodate,veltri:coherence:2021} and skew prounital closed categories \cite{uustalu:deductive:nodate}. From a purely proof-theoretic perspective, the main incentive gained from the study of these skew systems is a \emph{modular} understanding of Andreoli's focusing technique. This is particularly highlighted in Uustalu et al.'s study of \emph{partially normal} skew monoidal categories \cite{uustalu:proof:nodate}, where one or more structural laws among $\lambda$, $\rho$ and $\alpha$ are invertible. The focused sequent calculus of partially normal skew monoidal categories is obtained from the focused sequent calculus of skew monoidal categories by modularly adding new rules for each normality condition enforced, and analogously for the symmetric case \cite{veltri:coherence:2021}.
+We expect a similar modular behaviour to show up in the skew monoidal closed case as well.
+
+We are also planning to understand an extension of \SkNMILL\ with an exponential modality !. This in turns requires the study of linear exponential comonads on skew monoidal closed categories. We should take inspiration from Hasegawa's work on linear exponential comonads without symmetry \cite{hasegawa:linear:2017}. 
 
   \bibliographystyle{eptcs}
   \bibliography{docRefs}
