--- a/docRefs.bib
+++ b/docRefs.bib
@@ -1118,3 +1118,40 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
   url       = {https://doi.org/10.1002/malq.19900360405},
   doi       = {10.1002/malq.19900360405}
 }
+
+@inproceedings{chaudhuri:canonical:2008,
+  author    = {Kaustuv Chaudhuri and
+               Dale Miller and
+               Alexis Saurin},
+  editor    = {Giorgio Ausiello and
+               Juhani Karhum{\"{a}}ki and
+               Giancarlo Mauri and
+               C.{-}H. Luke Ong},
+  title     = {Canonical Sequent Proofs via Multi-Focusing},
+  booktitle = {Fifth {IFIP} International Conference On Theoretical Computer Science
+               - {TCS} 2008, {IFIP} 20th World Computer Congress, {TC} 1, Foundations
+               of Computer Science, September 7-10, 2008, Milano, Italy},
+  series    = {{IFIP}},
+  volume    = {273},
+  pages     = {383--396},
+  publisher = {Springer},
+  year      = {2008},
+  url       = {https://doi.org/10.1007/978-0-387-09680-3\_26},
+  doi       = {10.1007/978-0-387-09680-3\_26}
+}
+
+@inproceedings{scherer:simple:2015,
+  author    = {Gabriel Scherer and
+               Didier R{\'{e}}my},
+  editor    = {Kathleen Fisher and
+               John H. Reppy},
+  title     = {Which simple types have a unique inhabitant?},
+  booktitle = {Proceedings of the 20th {ACM} {SIGPLAN} International Conference on
+               Functional Programming, {ICFP} 2015, Vancouver, BC, Canada, September
+               1-3, 2015},
+  pages     = {243--255},
+  publisher = {{ACM}},
+  year      = {2015},
+  url       = {https://doi.org/10.1145/2784731.2784757},
+  doi       = {10.1145/2784731.2784757}
+}
