first reading, until Sec 3

--- a/docRefs.bib
+++ b/docRefs.bib
@@ -1108,7 +1108,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 }
 
 @article{abrusci:noncommutative:1990,
-  author    = {V. Michele Abrusci},
+  author    = {V. M. Abrusci},
   title     = {Non-commutative intuitionistic linear logic},
   journal   = {Math. Log. Q.},
   volume    = {36},
